@@ -36,6 +36,7 @@ VERSION 1.0.5
 	- use jEdit 4.1 icons for toolbar and trees
 	- use bold font for folders/projects (like Filesystembrowser does)
 	- fixed NPE in RemovalManager when removing projects
+	- added "Create new project ..." to combo box
 
 VERSION 1.0.4
   [stefan kost]
